# clawdboard

./: .gitignore  .mise.toml  .swiftlint.yml  AGENT-COCKPIT-CLAUDE-CODE-PROMPT.md  CLAUDE.md  LICENSE  Makefile  Package.swift  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: setup-clawdboard.md
.github/workflows/: ci.yml  release.yml
Sources/Clawdboard/: ClawdboardApp.swift
Sources/ClawdboardLib/: AccessibilityHelper.swift  AlertSoundManager.swift  AppState.swift  BundleAccessor.swift  CloudSessionWatcher.swift  DebugLog.swift  DiffStatsProvider.swift  GitHubPRPoller.swift  GitInfoPoller.swift  HookManager.swift  ITerm2Installer.swift  KeychainManager.swift  Models.swift  PRStatusProvider.swift  RemoteSessionWatcher.swift  SessionProcessor.swift  SessionStateWatcher.swift  TerminalTabPoller.swift  UsageLimitsWatcher.swift  VSCodeHiddenSessions.swift  YoloModeManager.swift
Sources/ClawdboardLib/Resources/: clawdboard-hook.py  iterm2-integration.py
Sources/ClawdboardLib/Views/: AgentRow.swift  Components.swift  DetachedPanelView.swift  PanelView.swift  SessionsTab.swift  SettingsView.swift
Tests/ClawdboardTests/: AppStateTests.swift  HookManagerTests.swift  ModelsTests.swift  SessionStateWatcherTests.swift
Tests/python/: conftest.py  test_hook.py
assets/: AppIcon.icns
docs/: DESIGN.md  PLAN.md  SETUP.md
docs/superpowers/specs/: 2026-03-26-per-agent-status-tracking-design.md
hooks/: clawdboard-hook.py  clawdboard-hook.sh  cloud-setup.sh  iterm2-focus.py  iterm2-integration.py
scripts/: bundle.sh
